# uupm-cli

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  README.zh.md  es-build.js  install.ps1  install.sh  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: npm-publish.yml  release.yml
src/: config.rs  create.rs  doctor.rs  freeze.rs  get-action.ts  index.ts  info.rs  main.rs  manifest.rs  meta.rs  nuget.rs  package-resolver.ts  publish.rs  remove.rs  spinner.rs  upgrade.rs  upm.rs  versions.rs
src/actions/: freeze-package.ts  install-package.ts  manage-registry.ts  resolve-package.ts  show-graphic.ts  show-version.ts
src/actions/configs/: config-base.ts  config-editor.ts  config-registry.ts
src/actions/resolvers/: freeze-package-resolver.ts  index.ts  mainfest-handle-base.ts  nuget-package-resolver.ts  step-spinner.ts  unity-package-resolver.ts
src/interfaces/: basic-struct.ts  global-config.ts  manifest.ts  unity-package-info.ts
src/output/: mod.rs
src/types/: index.ts
templates/: default.yml  directory.yml  package.yml  text.yml
templates/plugin/: dotnet.yml
templates/plugin/native/macos/: dylib.yml
templates/plugin/native/win/: x86.yml
templates/texture/: default.yml
